--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ author:
     weibo:     http://weibo.com/batljs426
     linkedin:  https://www.linkedin.com/in/json-lee-489748107
     
-    # facebook:  <hide>
-    twitter:   https://twitter.com/lijiansong
+    facebook:  https://www.facebook.com/jiansong.li.71
+    # twitter:   https://twitter.com/lijiansong
     # email:     http://www.google.com/recaptcha/mailhide/d?k=01I3lZFiZYng9N3QxYEtsDaQ==&c=31wAnZkuKqcG0ATAqJN8Z3ln5kkYLA9TwkGc-IbygpM=
 
 # Navigation (2nd level links supported)
