--- a/_config.yml
+++ b/_config.yml
@@ -61,4 +61,4 @@ hero:
 mathjax: true # whether support mathjax
 google_analytics_token: 'UA-00000000-1' # leave blank if you don't want google analytics
 disqus_short_name: 'your_short_name' # leave blank if you don't want disqus
-
+# encoding: utf-8
