--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ kramdown:
   input: GFM
 excerpt_separator: "<!-- more -->"
 highlighter: rouge
+#highlighter: pygments
 sass:
   style: compressed
   sass_dir: _scss    
