--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ version: 1.0.0
 # About/contact
 author:
   name: Json Lee
-  description: A passionate <strong>developer and researcher</strong> at <a href="http://www.ict.ac.cn" target="_blank">ICT-CAS</a> , keep coding, keep living.
+  description: A passionate <strong>developer and researcher</strong> at <a href="http://www.ict.ac.cn" target="_blank">ICT-CAS</a> .<br> Keep coding, keep living.
   gravatar: 901595fa4792f47a094c3c0f35fc29f3 # md5 hash of your email address
   contact:
     github:    https://github.com/lijiansong
