--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ version: 1.0.0
 # About/contact
 author:
   name: Json Lee
-  description: A passionate <strong>developer and researcher</strong> at <a href="http://www.ict.ac.cn" target="_blank">ICT-CAS</a> .<br> Keep coding, keep living.
+  description: I am a student at <a href="http://www.ict.ac.cn" target="_blank">Institute of Computing Technology, Chinese Academy of Sciences</a> now.<br> Keep coding and keep living...
   gravatar: 901595fa4792f47a094c3c0f35fc29f3 # md5 hash of your email address
   contact:
     github:    https://github.com/lijiansong
